# sl

./: .gitignore  Cargo.toml  Dockerfile  Makefile  sl.1
.github/workflows/: sl.yml
src/: accident.train  animation.rs  error.rs  main.rs  trains.rs
tests/: sl_test.rs
tests/assets/valid/: simple.train
tests/features/: basic_commandline.feature  expected_duration.feature  legacy_flags.feature  random_train.feature  selection.feature
tests/steps/: mod.rs  run_helper.sh
