[package]
name = "sl"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dependencies.cursive]
version = "0.16"
default-features = false
features = ["crossterm-backend"]