[package]
name = "sl"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
edition = "2018"

[[test]]
name = "sl_test"
harness = false

[dev-dependencies]
cucumber_rust = "0.9"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time"] }

[dependencies]
rand = "0.8.4"
clap = "2.33.3"

[dependencies.cursive]
version = "0.16"
default-features = false
features = ["crossterm-backend"]